--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@vitejs/plugin-vue": "^6.0.2",
         "@vuepic/vue-datepicker": "^12.0.5",
         "chart.js": "^4.5.1",
+        "face-api.js": "^0.22.2",
         "tinymce": "^6.8.6",
         "vue": "^3.5.25",
         "vue-chartjs": "^5.3.3",
