--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
         "@vuepic/vue-datepicker": "^12.0.5",
         "chart.js": "^4.5.1",
         "face-api.js": "^0.22.2",
+        "html5-qrcode": "^2.3.8",
+        "qrcode": "^1.5.4",
         "vue": "^3.5.25",
         "vue-chartjs": "^5.3.3",
         "vue-sweetalert2": "^5.0.11"
