--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
         "qrcode": "^1.5.4",
         "vue": "^3.5.25",
         "vue-chartjs": "^5.3.3",
-        "vue-sweetalert2": "^5.0.11"
+        "vue-sweetalert2": "^5.0.11",
+        "ziggy-js": "^2.6.0"
     },
     "overrides": {
         "node-fetch": "^2.7.0"
