--- a/package.json
+++ b/package.json
@@ -16,17 +16,20 @@
     "dependencies": {
         "@chenfengyuan/vue-countdown": "^2.1.3",
         "@inertiajs/vue3": "^2.2.19",
-        "@tiptap/extension-image": "^3.12.0",
-        "@tiptap/extension-link": "^3.12.0",
-        "@tiptap/extension-text-align": "^3.12.0",
-        "@tiptap/extension-underline": "^3.12.0",
-        "@tiptap/starter-kit": "^3.12.0",
-        "@tiptap/vue-3": "^3.12.0",
+        "@tiptap/extension-image": "^3.13.0",
+        "@tiptap/extension-link": "^3.13.0",
+        "@tiptap/extension-mathematics": "^3.13.0",
+        "@tiptap/extension-text-align": "^3.13.0",
+        "@tiptap/extension-underline": "^3.13.0",
+        "@tiptap/starter-kit": "^3.13.0",
+        "@tiptap/vue-3": "^3.13.0",
         "@vitejs/plugin-vue": "^6.0.2",
         "@vuepic/vue-datepicker": "^12.0.5",
         "chart.js": "^4.5.1",
+        "composer": "^4.1.0",
         "face-api.js": "^0.22.2",
         "html5-qrcode": "^2.3.8",
+        "katex": "^0.16.25",
         "qrcode": "^1.5.4",
         "vue": "^3.5.25",
         "vue-chartjs": "^5.3.3",
