--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
         "laravel-vite-plugin": "^2.0.1",
         "tailwindcss": "^4.1.17",
         "terser": "^5.44.1",
-        "vite": "^7.2.6"
+        "vite": "^7.2.7"
     },
     "dependencies": {
         "@chenfengyuan/vue-countdown": "^2.1.3",
-        "@inertiajs/vue3": "^2.2.19",
+        "@inertiajs/vue3": "^2.2.20",
         "@tiptap/extension-image": "^3.13.0",
         "@tiptap/extension-link": "^3.13.0",
         "@tiptap/extension-mathematics": "^3.13.0",
@@ -25,12 +25,13 @@
         "@tiptap/starter-kit": "^3.13.0",
         "@tiptap/vue-3": "^3.13.0",
         "@vitejs/plugin-vue": "^6.0.2",
-        "@vuepic/vue-datepicker": "^12.0.5",
+        "@vuepic/vue-datepicker": "^12.1.0",
         "chart.js": "^4.5.1",
         "composer": "^4.1.0",
-        "face-api.js": "^0.22.2",
+        "@mediapipe/face_detection": "^0.4.1646425229",
+        "@mediapipe/camera_utils": "^0.3.1675466862",
         "html5-qrcode": "^2.3.8",
-        "katex": "^0.16.25",
+        "katex": "^0.16.27",
         "qrcode": "^1.5.4",
         "vue": "^3.5.25",
         "vue-chartjs": "^5.3.3",
