--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "dependencies": {
         "@chenfengyuan/vue-countdown": "^2.1.3",
         "@inertiajs/vue3": "^2.2.20",
+        "@mediapipe/camera_utils": "^0.3.1675466862",
+        "@mediapipe/face_detection": "^0.4.1646425229",
+        "@mediapipe/face_mesh": "^0.4.1633559619",
         "@tiptap/extension-image": "^3.13.0",
         "@tiptap/extension-link": "^3.13.0",
         "@tiptap/extension-mathematics": "^3.13.0",
@@ -28,8 +31,6 @@
         "@vuepic/vue-datepicker": "^12.1.0",
         "chart.js": "^4.5.1",
         "composer": "^4.1.0",
-        "@mediapipe/face_detection": "^0.4.1646425229",
-        "@mediapipe/camera_utils": "^0.3.1675466862",
         "html5-qrcode": "^2.3.8",
         "katex": "^0.16.27",
         "qrcode": "^1.5.4",
