feat: Major improvements and bug fixes
- Fix race condition timer with DB transaction lock
- Fix pause time calculation with total_paused_ms tracking
- Fix frontend timer desync with server time sync
- Fix essay recalculation status logic
- Fix violation count mapping for blur types
- Fix bulk enrollment race condition with unique constraint
- Fix pause/resume 404 error (incorrect URLs)
- Remove answer encryption causing issues

Anti-cheat improvements:
- Disable fullscreen requirement
- Increase face detection tolerance
- Add realtime audio detection with cooldown
- Upgrade violation screenshot to HD (1280x720, 85% quality)

Rate limiting for 500 concurrent students:
- exam: 200/min, anticheat: 100/min, heartbeat: 60/min

UX improvements:
- Integrate Question Categories into Question Bank (tabs)
- Merge Backup/Maintenance/Cleanup into Systems menu
- Update README for beginners (casual but professional)
- Add HTML5 support for questions (SVG, MathML, Canvas, Audio/Video)

DevOps:
- Add CI/CD workflows (ci.yml, deploy.yml, docker.yml)
- Add deploy script
- Configure FrankenPHP for Laravel Octane

--- a/.env.example
+++ b/.env.example
@@ -77,8 +77,12 @@ TURNSTILE_SITE_KEY=
 TURNSTILE_SECRET_KEY=
 
 # Laravel Octane (optional, for production)
-OCTANE_SERVER=frankenphp
+# Options: swoole, frankenphp, roadrunner
+OCTANE_SERVER=swoole
 OCTANE_HTTPS=false
+OCTANE_WORKERS=auto
+OCTANE_TASK_WORKERS=auto
+OCTANE_MAX_REQUESTS=500
 
 # Gemini AI (for AI Question Generator)
 # Get key from: https://aistudio.google.com/apikey
