--- a/package.json
+++ b/package.json
@@ -3,20 +3,24 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+        "dev:octane": "concurrently \"php artisan octane:start --watch\" \"vite\"",
+        "octane": "php artisan octane:start --host=0.0.0.0 --port=8000",
+        "octane:watch": "php artisan octane:start --watch",
+        "octane:stop": "php artisan octane:stop"
     },
     "devDependencies": {
-        "@tailwindcss/vite": "^4.1.17",
+        "@tailwindcss/vite": "^4.1.18",
         "axios": "^1.13.2",
         "concurrently": "^9.2.1",
         "laravel-vite-plugin": "^2.0.1",
-        "tailwindcss": "^4.1.17",
+        "tailwindcss": "^4.1.18",
         "terser": "^5.44.1",
         "vite": "^7.2.7"
     },
     "dependencies": {
         "@chenfengyuan/vue-countdown": "^2.1.3",
-        "@inertiajs/vue3": "^2.2.20",
+        "@inertiajs/vue3": "^2.3.1",
         "@mediapipe/camera_utils": "^0.3.1675466862",
         "@mediapipe/face_detection": "^0.4.1646425229",
         "@mediapipe/face_mesh": "^0.4.1633559619",
@@ -27,7 +31,7 @@
         "@tiptap/extension-underline": "^3.13.0",
         "@tiptap/starter-kit": "^3.13.0",
         "@tiptap/vue-3": "^3.13.0",
-        "@vitejs/plugin-vue": "^6.0.2",
+        "@vitejs/plugin-vue": "^6.0.3",
         "@vuepic/vue-datepicker": "^12.1.0",
         "chart.js": "^4.5.1",
         "composer": "^4.1.0",
