Implement UI/UX improvements: dark mode, timer progress bar, exam onboarding, and accessibility enhancements

--- a/.env.example
+++ b/.env.example
@@ -34,7 +34,7 @@ SESSION_LIFETIME=120
 SESSION_ENCRYPT=true
 SESSION_PATH=/
 SESSION_DOMAIN=null
-SESSION_SECURE_COOKIE=false
+SESSION_SECURE_COOKIE=true
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
@@ -96,3 +96,39 @@ TELEGRAM_ADMIN_IDS=
 TELEGRAM_NOTIFY_IDS=
 TELEGRAM_GROUP_TOPIC_ID=
 TELEGRAM_WEBHOOK_SECRET=
+
+# ===========================================
+# Security Configuration
+# ===========================================
+
+# IP Whitelist for Admin Panel (optional)
+# Comma-separated list of IPs or CIDR ranges
+# Example: 192.168.1.0/24,10.0.0.0/8,127.0.0.1
+ADMIN_IP_WHITELIST_ENABLED=false
+ADMIN_IP_WHITELIST=127.0.0.1,::1
+
+# Rate Limiting
+LOGIN_MAX_ATTEMPTS=5
+LOGIN_DECAY_MINUTES=5
+API_RATE_LIMIT_GENERAL=60
+API_RATE_LIMIT_WRITE=30
+API_RATE_LIMIT_SENSITIVE=10
+
+# Session Security
+SESSION_ACTIVITY_TIMEOUT=30
+SESSION_ABSOLUTE_TIMEOUT=8
+
+# Password Policy
+PASSWORD_MIN_LENGTH=8
+PASSWORD_REQUIRE_UPPERCASE=true
+PASSWORD_REQUIRE_LOWERCASE=true
+PASSWORD_REQUIRE_NUMBERS=true
+PASSWORD_REQUIRE_SYMBOLS=false
+
+# File Upload
+MAX_UPLOAD_SIZE=10240
+UPLOAD_SCAN_ENABLED=false
+
+# Content Security
+MAX_QUESTION_LENGTH=50000
+LOG_SUSPICIOUS_INPUT=true
