Add New Features

--- a/.env.example
+++ b/.env.example
@@ -35,6 +35,7 @@ SESSION_ENCRYPT=true
 SESSION_PATH=/
 SESSION_DOMAIN=null
 SESSION_SECURE_COOKIE=true
+SESSION_SAME_SITE=lax
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
@@ -132,3 +133,20 @@ UPLOAD_SCAN_ENABLED=false
 # Content Security
 MAX_QUESTION_LENGTH=50000
 LOG_SUSPICIOUS_INPUT=true
+
+# Anti-Cheat Settings
+# Number of violations before auto-blocking student (0 = disabled)
+ANTICHEAT_AUTO_BLOCK_THRESHOLD=3
+ANTICHEAT_AUTO_BLOCK_ENABLED=true
+
+# ZIP Upload Security
+ZIP_MAX_FILES=1000
+ZIP_MAX_EXTRACTED_SIZE=524288000
+ZIP_MAX_COMPRESSION_RATIO=100
+
+# Security Audit Logging
+SECURITY_AUDIT_DB_ENABLED=true
+SECURITY_AUDIT_FILE_ENABLED=true
+SECURITY_AUDIT_RETENTION_DAYS=90
+SECURITY_LOG_LEVEL=info
+SECURITY_LOG_DAYS=90
